# unzed

./: .gitignore  Cargo.toml  PRIVACY_CHANGES.md  README.md  TELEMETRY_AUDIT.md  build.sh
.github/workflows/: build_custom_release.yml
assets/settings/: default.json
crates/acp_thread/src/: acp_thread.rs
crates/agent/src/: agent.rs  db.rs  thread.rs  thread_store.rs  tool_permissions.rs
crates/agent/src/edit_agent/: evals.rs
crates/agent/src/tools/evals/: streaming_edit_file.rs
crates/agent_settings/src/: agent_settings.rs
crates/agent_settings/src/prompts/: compact_context_prompt.txt
crates/agent_ui/src/: agent_panel.rs  agent_ui.rs  buffer_codegen.rs  conversation_view.rs  entry_view_state.rs  inline_assistant.rs  terminal_codegen.rs  terminal_inline_assistant.rs  thread_metadata_store.rs
crates/agent_ui/src/conversation_view/: thread_view.rs
crates/ai_onboarding/src/: ai_onboarding.rs
crates/auto_update/src/: auto_update.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  telemetry.rs
crates/edit_prediction/src/: edit_prediction.rs
crates/edit_prediction_ui/src/: edit_prediction_button.rs
crates/icons/src/: icons.rs
crates/language_model_core/src/: request.rs
crates/language_models/: Cargo.toml
crates/language_models/src/: extension.rs  language_models.rs  provider.rs  settings.rs
crates/language_models/src/provider/: anthropic_telemetry.rs  copilot_chat.rs  lmstudio.rs  open_router.rs  qwen.rs
crates/language_models/src/provider/anthropic/: telemetry.rs
crates/lmstudio/src/: lmstudio.rs
crates/open_ai/src/: completion.rs  open_ai.rs
crates/open_router/src/: open_router.rs
crates/prompt_store/src/: prompts.rs
crates/qwen/: Cargo.toml
crates/qwen/src/: qwen.rs
crates/settings_content/src/: agent.rs  language_model.rs  settings_content.rs
crates/settings_ui/src/: page_data.rs  settings_ui.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: telemetry.rs
crates/zed/: Cargo.toml
crates/zed/src/: reliability.rs  visual_test_runner.rs
crates/zed/src/zed/: app_menus.rs  edit_prediction_registry.rs  telemetry_log.rs
docs/src/ai/: agent-settings.md  configuration.md
