[package]
name = "language_models"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/language_models.rs"

[features]
default = [
    "anthropic",
    "bedrock",
    "cloud",
    "copilot_chat",
    "deepseek",
    "google",
    "lmstudio",
    "mistral",
    "ollama",
    "open_ai",
    "open_router",
    "opencode",
    "vercel",
    "vercel_ai_gateway",
    "x_ai",
]
anthropic = ["dep:anthropic"]
bedrock = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws_http_client",
    "dep:bedrock",
]
cloud = [
    "dep:cloud_api_client",
    "dep:cloud_api_types",
    "dep:language_models_cloud",
]
copilot_chat = [
    "anthropic",
    "dep:copilot",
    "dep:copilot_chat",
    "dep:copilot_ui",
]
deepseek = ["dep:deepseek"]
google = ["dep:google_ai"]
lmstudio = ["dep:lmstudio"]
mistral = ["dep:mistral"]
ollama = ["dep:ollama"]
open_ai = []
open_router = ["dep:open_router"]
opencode = ["dep:opencode"]
vercel = ["dep:vercel"]
vercel_ai_gateway = []
x_ai = ["dep:x_ai"]

[dependencies]
ai_onboarding.workspace = true
anthropic = { workspace = true, features = ["schemars"], optional = true }
anyhow.workspace = true
aws-config = { workspace = true, features = ["behavior-version-latest"], optional = true }
aws-credential-types = { workspace = true, features = ["hardcoded-credentials"], optional = true }
aws_http_client = { workspace = true, optional = true }
base64.workspace = true
bedrock = { workspace = true, features = ["schemars"], optional = true }
client.workspace = true
cloud_api_client = { workspace = true, optional = true }
cloud_api_types = { workspace = true, optional = true }
collections.workspace = true
component.workspace = true
convert_case.workspace = true
copilot = { workspace = true, optional = true }
copilot_chat = { workspace = true, optional = true }
copilot_ui = { workspace = true, optional = true }
credentials_provider.workspace = true
deepseek = { workspace = true, features = ["schemars"], optional = true }
extension.workspace = true
extension_host.workspace = true
fs.workspace = true
futures.workspace = true
google_ai = { workspace = true, features = ["schemars"], optional = true }
gpui.workspace = true
gpui_tokio.workspace = true
http_client.workspace = true
language.workspace = true
language_model.workspace = true
language_models_cloud = { workspace = true, optional = true }
lmstudio = { workspace = true, features = ["schemars"], optional = true }
log.workspace = true
menu.workspace = true
mistral = { workspace = true, features = ["schemars"], optional = true }
ollama = { workspace = true, features = ["schemars"], optional = true }
open_ai = { workspace = true, features = ["schemars"] }
opencode = { workspace = true, features = ["schemars"], optional = true }
open_router = { workspace = true, features = ["schemars"], optional = true }
qwen = { workspace = true, features = ["schemars"] }
release_channel.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
smol.workspace = true
strum.workspace = true
tiktoken-rs.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
ui.workspace = true
ui_input.workspace = true
util.workspace = true
vercel = { workspace = true, features = ["schemars"], optional = true }
x_ai = { workspace = true, features = ["schemars"], optional = true }

[dev-dependencies]
language_model = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
